--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.3",
     "compression": "^1.7.3",
     "config": "^2.0.1",
     "express": "^4.16.3",
